[package]
name = "android_log"
version = "0.2.0"
authors = [
  "Saleem Rashid <dev@saleemrashid.com>",
  "Brendan Molloy <brendan@bbqsrc.net>"
]
edition = "2018"

repository = "https://github.com/saleemrashid/android_log-rs"

license = "MIT OR Apache-2.0"
readme = "README.md"

description = """
Logger which writes to Android logging subsystem
"""

[badges]
travis-ci = { repository = "saleemrashid/android_log-rs" }

[dependencies]
log = { version = "0.4.8", features = ["std"] }
android_liblog-sys = "0.1"
